test/should-fail/vsgc549c.f3
/* 
 * @test/compile-error
 *
 * An example of an operator where one isn't expected.
 */ 

class Node {
    +=
};
